@@ -1,26 +1,11 @@
-% latex tex4ht-env   or   htlatex tex4ht-env "xhtml,3"
+% $Id$
+%      latex tex4ht-env
+% or htlatex tex4ht-env "xhtml,3"
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-env.tex                                         %
-% Copyright (C) 1997--            Eitan M. Gurari        %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-%                             gurari@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 1997--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \documentclass{article}
 
@@ -35,23 +20,7 @@
     \Configure{ProTex}{env,<<<>>>,@,title,list}
 \fi
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-   \else           #1--\the\year\fi
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\input{common}
 
 \begin{document}
 
@@ -83,7 +52,7 @@ before validations.
 @<xtpipes: unix oo@>%
 @<unix validate@> %
 @<unix openoffice@>%
-% end of file                                                       %
+% end of file
 >>>
 
 
@@ -106,7 +75,7 @@ before validations.
 @<xtpipes: win32 oo@>%
 @<win32 validate@> %
 @<win32 openoffice@>%
-% end of file                                                       %
+% end of file
 >>>
 
 
@@ -131,7 +100,7 @@ before validations.
 @<xtpipes: my oo@>
 @<my validate@> %
 @<unix openoffice@>%
-% end of file                                                       %
+% end of file
 >>>
 
 
@@ -804,7 +773,7 @@ G.
 
 \<dvips convert (personal)\><<<
 Gdvips -E -Ppdf -mode ibmvga -D 110 -f %%1 -pp %%2  > zz%%4.ps
-G/usr/local/magick-6.2.4-6/bin/convert -trim +repage -density 110x110 -transparent '#FFFFFF' zz%%4.ps %%3
+Gconvert -trim +repage -density 110x110 -transparent '#FFFFFF' zz%%4.ps %%3
 Grm zz%%4.ps >>>
 
 \<unix dvips convert\><<<
@@ -1948,68 +1917,28 @@ Note: the permission option `S' takes into account also trailing spaces.
 
 
 
-
-
-
-
-
-
 %%%%%%%%%%%%%%%%%%
 \section{Copyright}
 %%%%%%%%%%%%%%%%%%
 
-
+\input{tex4ht-cpright}
 
 
 \<unix copyright\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% tex4ht.env / .tex4ht (unix)           @version %
-% Copyright (C) @CopyYear.1997.        Eitan M. Gurari        %
-@<TeX4ht copyright@>
->>>
-
+% tex4ht.env-unix or .tex4ht (@version), generated from @jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) @CopyYear.1997. Eitan M. Gurari
+@<TeX4ht copyright@>>>>
 
 \<private copyright\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% tex4ht.env / .tex4ht (private)        @version %
-% Copyright (C) @CopyYear.1997.        Eitan M. Gurari        %
-@<TeX4ht copyright@>
->>>
-
-
+% tex4ht.env or .tex4ht (private) (@version), generated from @jobname.tex
+% Copyright (C) @CopyYear.1997. Eitan M. Gurari
+@<TeX4ht copyright@>>>>
 
 \<win32 copyright\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% tex4ht.env (ms win)                   @version %
-% Copyright (C) @CopyYear.1997.        Eitan M. Gurari        %
-@<TeX4ht copyright@>
->>>
-
-
-\<TeX4ht copyright\><<<
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is Eitan M. Gurari.                                    %
-%                                                        %
-%                             gurari@@cse.ohio-state.edu  %
-%                 http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   >>>
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
+% tex4ht.env-win32 (@version), generated from @jobname.tex
+% Copyright (C) @CopyYear.1997. Eitan M. Gurari
+@<TeX4ht copyright@>>>>
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -2018,14 +1947,6 @@ Note: the permission option `S' takes into account also trailing spaces.
 \OutputCodE\<tex4ht.env-win32\>
 
 
-\Needs{"mv tex4ht.env \HOME texmf/tex4ht/base/solaris/tex4ht.env"}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\Needs{"mv tex4ht.env \HOME texmf/tex4ht/base/solaris/tex4ht.env"}
 
 \end{document}
-
-
-
-
-
-
